--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
   </head>
   <body>
+    <header></header>
     <h1>This is some content</h1>
     <p>
       Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum vel ipsum cum, ratione
